samples/_failures_safe/1761593480_c19b32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32909bda.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_32909bda.c:165:27: error: expected ‘;’ at end of input
  165 |             parser_advance
      |                           ^
      |                           ;
./samples/SAFE/__tmp_32909bda.c:165:13: error: expected declaration or statement at end of input
  165 |             parser_advance
      |             ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_32909bda.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32909bda.c:165:13: error: expected declaration or statement at end of input
